package Entrega;

public interface DBConnection {
        boolean connect();
    void disconnect();
}
